Added missing legend icons

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -930,16 +930,16 @@ Tex = icon_song_fixedby
 ########## LEGEND  #########
 
 [SongStaticNonParty1]
-X = 550
+X = 577
 Y = 0
-W = 250
+W = 230
 H = 600
 Tex = BGFade
 Color = White
 Type = Transparent
 
 [SongTextNonParty1]
-X = 666
+X = 690
 Y = 410
 Z = 0.952
 Color = White
@@ -949,7 +949,7 @@ Align = 1
 Text = SING_SONG_SELECTION_LEGEND_TITLE
 
 [SongStaticNonParty2]
-X = 601
+X = 611
 Y = 430
 Z = 1
 W = 15
@@ -959,7 +959,7 @@ Color = White
 Type = Transparent
 
 [SongTextNonParty2]
-X = 630
+X = 640
 Y = 432
 Z = 0.952
 Color = White
@@ -969,7 +969,7 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_VIDEO
 
 [SongStaticNonParty3]
-X = 600
+X = 610
 Y = 450
 Z = 0.952
 W = 26
@@ -979,7 +979,7 @@ Color = White
 Type = Transparent
 
 [SongTextNonParty3]
-X = 630
+X = 640
 Y = 452
 Z = 0.952
 Color = White
@@ -989,7 +989,7 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 
 [SongStaticNonParty4]
-X = 600
+X = 610
 Y = 470
 Z = 0.952
 W = 26
@@ -999,7 +999,7 @@ Color = White
 Type = Transparent
 
 [SongTextNonParty4]
-X = 630
+X = 640
 Y = 472
 Z = 0.952
 Color = White
@@ -1009,7 +1009,7 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 
 [SongStaticNonParty5]
-X = 600
+X = 610
 Y = 490
 Z = 0.952
 W = 13
@@ -1019,7 +1019,7 @@ Color = White
 Type = Transparent
 
 [SongTextNonParty5]
-X = 630
+X = 640
 Y = 492
 Z = 0.952
 Color = White
@@ -1027,6 +1027,66 @@ Font = 0
 Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_DUET
+
+[SongStaticNonParty6]
+X = 610
+Y = 510
+Z = 0.952
+W = 13
+H = 17
+Tex = icon_song_rap
+Color = White
+Type = Transparent
+
+[SongTextNonParty6]
+X = 640
+Y = 512
+Z = 0.952
+Color = White
+Font = 0
+Size = 12
+Align = 0
+Text = SING_SONG_SELECTION_LEGEND_RAP
+
+[SongStaticNonParty7]
+X = 610
+Y = 530
+Z = 0.952
+W = 12
+H = 16
+Tex = icon_song_createdby
+Color = White
+Type = Transparent
+
+[SongTextNonParty7]
+X = 640
+Y = 534
+Z = 0.952
+Color = White
+Font = 0
+Size = 12
+Align = 0
+Text = SING_SONG_SELECTION_LEGEND_CREATEDBY
+
+[SongStaticNonParty8]
+X = 610
+Y = 551
+Z = 0.952
+W = 11
+H = 14
+Tex = icon_song_fixedby
+Color = White
+Type = Transparent
+
+[SongTextNonParty8]
+X = 640
+Y = 555
+Z = 0.952
+Color = White
+Font = 0
+Size = 12
+Align = 0
+Text = SING_SONG_SELECTION_LEGEND_FIXEDBY
 
 [SongTextScore]
 Color = White
@@ -1221,39 +1281,74 @@ Align = 1
 
 ########## LEGEND ROULETTE #########
 
+#background legend
 [SongRouletteStaticNonParty1]
 Inheritance = SongStaticNonParty1
 
+#text title legend
 [SongRouletteTextNonParty1]
 Inheritance = SongTextNonParty1
 
+#icon video legend
 [SongRouletteStaticNonParty2]
 Inheritance = SongStaticNonParty2
 
+#text video legend
 [SongRouletteTextNonParty2]
 Inheritance = SongTextNonParty2
 
+#icon medley legend
 [SongRouletteStaticNonParty3]
 Inheritance = SongStaticNonParty3
 
+#text medley legend
 [SongRouletteTextNonParty3]
 Inheritance = SongTextNonParty3
 
+#icon medley calculated legend
 [SongRouletteStaticNonParty4]
 Inheritance = SongStaticNonParty4
 
+#text medley legend
 [SongRouletteTextNonParty4]
 Inheritance = SongTextNonParty4
 
+#icon duet legend
 [SongRouletteStaticNonParty5]
 Inheritance = SongStaticNonParty5
 
+#text duet legend
 [SongRouletteTextNonParty5]
 Inheritance = SongTextNonParty5
 
+#icon rap legend
+[SongRouletteStaticNonParty6]
+Inheritance = SongStaticNonParty6
+
+#text rap legend
 [SongRouletteTextNonParty6]
-X = 20
-Y = 20
+Inheritance = SongTextNonParty6
+
+#icon createdby legend
+[SongRouletteStaticNonParty7]
+Inheritance = SongStaticNonParty7
+
+#text createdby legend
+[SongRouletteTextNonParty7]
+Inheritance = SongTextNonParty7
+
+#icon fixedby legend
+[SongRouletteStaticNonParty8]
+Inheritance = SongStaticNonParty8
+
+#text fixedby legend
+[SongRouletteTextNonParty8]
+Inheritance = SongTextNonParty8
+
+#title screen: Song selection
+[SongRouletteTextNonParty9]
+X = 15
+Y = 15
 Color = White
 Font = 0
 Size = 40
@@ -1733,62 +1828,54 @@ Y = 450
 
 [SongChessboardStaticNonParty1]
 Inheritance = SongStaticNonParty1
-X = 607
-Y = 0
 
-#text title legend
 [SongChessboardTextNonParty1]
 Inheritance = SongTextNonParty1
-X = 696
-Y = 440
 
-#icon video legend
 [SongChessboardStaticNonParty2] 
 Inheritance = SongStaticNonParty2
-X = 631
-Y = 460
 
-#text video legend
 [SongChessboardTextNonParty2]
 Inheritance = SongTextNonParty2
-X = 660
-Y = 462
 
-#icon medley legend
 [SongChessboardStaticNonParty3]
 Inheritance = SongStaticNonParty3
-X = 630
-Y = 480
 
-#text medley legend
 [SongChessboardTextNonParty3]
 Inheritance = SongTextNonParty3
-X = 660
-Y = 482
 
-#icon medley calculated legend
 [SongChessboardStaticNonParty4]
 Inheritance = SongStaticNonParty4
-X = 630
-Y = 500
 
-#text medley legend
 [SongChessboardTextNonParty4]
 Inheritance = SongTextNonParty4
-X = 660
-Y = 502
 
-#icon duet legend
 [SongChessboardStaticNonParty5]
 Inheritance = SongStaticNonParty5
-X = 630
-Y = 520
 
-#text duet legend
 [SongChessboardTextNonParty5]
 Inheritance = SongTextNonParty5
-X = 660
-Y = 522
+
+[SongChessboardStaticNonParty6]
+Inheritance = SongStaticNonParty6
+
+[SongChessboardTextNonParty6]
+Inheritance = SongTextNonParty6
+
+[SongChessboardStaticNonParty7]
+Inheritance = SongStaticNonParty7
+
+[SongChessboardTextNonParty7]
+Inheritance = SongTextNonParty7
+
+[SongChessboardStaticNonParty8]
+Inheritance = SongStaticNonParty8
+
+[SongChessboardTextNonParty8]
+Inheritance = SongTextNonParty8
+
+[SongChessboardTextNonParty9]
+Inheritance = SongRouletteTextNonParty9
 
 [SongChessboardTextMaxScore]
 Inheritance = SongTextMaxScore
@@ -1914,13 +2001,6 @@ Y = 510
 Inheritance = SongText3PlayersDuetSingerP3
 X = 107
 Y = 540
-
-[SongChessboardTextNonParty6]
-#Title screen: Song Selection
-Inheritance = SongRouletteTextNonParty6
-X = 10
-Y = 10
-Size = 45
 
 #and these are the ones for partymode
 # NAVBAR for party
@@ -2140,58 +2220,54 @@ Inheritance = SongRouletteTextFixer
 
 [SongCarouselStaticNonParty1]
 Inheritance = SongStaticNonParty1
-X = 555
-Y = 0
 
 [SongCarouselTextNonParty1]
 Inheritance = SongTextNonParty1
-X = 661
-Y = 410
 
 [SongCarouselStaticNonParty2]
 Inheritance = SongStaticNonParty2
-X = 596
-Y = 430
 
 [SongCarouselTextNonParty2]
 Inheritance = SongTextNonParty2
-X = 625
-Y = 432
 
 [SongCarouselStaticNonParty3]
 Inheritance = SongStaticNonParty3
-X = 595
-Y = 450
 
 [SongCarouselTextNonParty3]
 Inheritance = SongTextNonParty3
-X = 625
-Y = 452
 
 [SongCarouselStaticNonParty4]
 Inheritance = SongStaticNonParty4
-X = 595
-Y = 470
 
 [SongCarouselTextNonParty4]
 Inheritance = SongTextNonParty4
-X = 625
-Y = 472
 
 [SongCarouselStaticNonParty5]
 Inheritance = SongStaticNonParty5
-X = 595
-Y = 490
 
 [SongCarouselTextNonParty5]
 Inheritance = SongTextNonParty5
-X = 625
-Y = 492
+
+[SongCarouselStaticNonParty6]
+Inheritance = SongStaticNonParty6
 
 [SongCarouselTextNonParty6]
-Inheritance = SongRouletteTextNonParty6
-X = 20
-Y = 20
+Inheritance = SongTextNonParty6
+
+[SongCarouselStaticNonParty7]
+Inheritance = SongStaticNonParty7
+
+[SongCarouselTextNonParty7]
+Inheritance = SongTextNonParty7
+
+[SongCarouselStaticNonParty8]
+Inheritance = SongStaticNonParty8
+
+[SongCarouselTextNonParty8]
+Inheritance = SongTextNonParty8
+
+[SongCarouselTextNonParty9]
+Inheritance = SongRouletteTextNonParty9
 
 [SongCarouselTextMaxScore]
 Inheritance = SongTextMaxScore
@@ -2575,53 +2651,54 @@ Y = 227
 
 [SongSlotMachineStaticNonParty1]
 Inheritance = SongStaticNonParty1
-X = 555
-Y = 0
 
 [SongSlotMachineTextNonParty1]
 Inheritance = SongTextNonParty1
-X = 635
-Y = 420
 
 [SongSlotMachineStaticNonParty2]
 Inheritance = SongStaticNonParty2
-X = 566
-Y = 438
 
 [SongSlotMachineTextNonParty2]
 Inheritance = SongTextNonParty2
-X = 595
-Y = 442
 
 [SongSlotMachineStaticNonParty3]
 Inheritance = SongStaticNonParty3
-X = 565
-Y = 460
 
 [SongSlotMachineTextNonParty3]
 Inheritance = SongTextNonParty3
-X = 595
-Y = 462
 
 [SongSlotMachineStaticNonParty4]
 Inheritance = SongStaticNonParty4
-X = 565
-Y = 480
 
 [SongSlotMachineTextNonParty4]
 Inheritance = SongTextNonParty4
-X = 595
-Y = 482
 
 [SongSlotMachineStaticNonParty5]
 Inheritance = SongStaticNonParty5
-X = 565
-Y = 500
 
 [SongSlotMachineTextNonParty5]
 Inheritance = SongTextNonParty5
-X = 595
-Y = 502
+
+[SongSlotMachineStaticNonParty6]
+Inheritance = SongStaticNonParty6
+
+[SongSlotMachineTextNonParty6]
+Inheritance = SongTextNonParty6
+
+[SongSlotMachineStaticNonParty7]
+Inheritance = SongStaticNonParty7
+
+[SongSlotMachineTextNonParty7]
+Inheritance = SongTextNonParty7
+
+[SongSlotMachineStaticNonParty8]
+Inheritance = SongStaticNonParty8
+
+[SongSlotMachineTextNonParty8]
+Inheritance = SongTextNonParty8
+
+[SongSlotMachineTextNonParty9]
+Inheritance = SongRouletteTextNonParty9
 
 [SongSlotMachineTextMaxScore]
 Inheritance = SongTextMaxScore
@@ -2737,10 +2814,6 @@ Y = 460
 Inheritance = SongText3PlayersDuetSingerP3
 X = 372
 Y = 490
-
-[SongSlotMachineTextNonParty6]
-Inheritance = SongRouletteTextNonParty6
-X = 20
 
 #and these are the ones for partymode
 # NAVBAR for party
@@ -3005,10 +3078,26 @@ Inheritance = SongStaticNonParty5
 [SongSlideTextNonParty5]
 Inheritance = SongTextNonParty5
 
+[SongSlideStaticNonParty6]
+Inheritance = SongStaticNonParty6
+
 [SongSlideTextNonParty6]
-Inheritance = SongRouletteTextNonParty6
-X = 18
-Y = 18
+Inheritance = SongTextNonParty6
+
+[SongSlideStaticNonParty7]
+Inheritance = SongStaticNonParty7
+
+[SongSlideTextNonParty7]
+Inheritance = SongTextNonParty7
+
+[SongSlideStaticNonParty8]
+Inheritance = SongStaticNonParty8
+
+[SongSlideTextNonParty8]
+Inheritance = SongTextNonParty8
+
+[SongSlideTextNonParty9]
+Inheritance = SongRouletteTextNonParty9
 
 [SongSlideTextMaxScore]
 Inheritance = SongTextMaxScore
@@ -3443,61 +3532,54 @@ Y = 556
 
 [SongListStaticNonParty1]
 Inheritance = SongStaticNonParty1
-X = 555
-Y = 0
-W = 245
-H = 800
 
 [SongListTextNonParty1]
 Inheritance = SongTextNonParty1
-X = 661
-Y = 422
 
 [SongListStaticNonParty2]
 Inheritance = SongStaticNonParty2
-X = 596
-Y = 450
 
 [SongListTextNonParty2]
 Inheritance = SongTextNonParty2
-X = 625
-Y = 452
 
 [SongListStaticNonParty3]
 Inheritance = SongStaticNonParty3
-X = 595
-Y = 470
 
 [SongListTextNonParty3]
 Inheritance = SongTextNonParty3
-X = 625
-Y = 472
 
 [SongListStaticNonParty4]
 Inheritance = SongStaticNonParty4
-X = 595
-Y = 490
 
 [SongListTextNonParty4]
 Inheritance = SongTextNonParty4
-X = 625
-Y = 492
 
 [SongListStaticNonParty5]
 Inheritance = SongStaticNonParty5
-X = 595
-Y = 510
 
 [SongListTextNonParty5]
 Inheritance = SongTextNonParty5
-X = 625
-Y = 512
 
-#Title: Song selection
+[SongListStaticNonParty6]
+Inheritance = SongStaticNonParty6
+
 [SongListTextNonParty6]
-Inheritance = SongRouletteTextNonParty6
-X = 30
-Y = 12
+Inheritance = SongTextNonParty6
+
+[SongListStaticNonParty7]
+Inheritance = SongStaticNonParty7
+
+[SongListTextNonParty7]
+Inheritance = SongTextNonParty7
+
+[SongListStaticNonParty8]
+Inheritance = SongStaticNonParty8
+
+[SongListTextNonParty8]
+Inheritance = SongTextNonParty8
+
+[SongListTextNonParty9]
+Inheritance = SongRouletteTextNonParty9
 
 [SongListTextMaxScore]
 Inheritance = SongTextMaxScore
@@ -3942,63 +4024,54 @@ X = 435
 
 [SongMosaicStaticNonParty1]
 Inheritance = SongStaticNonParty1
-X = 590
-Y = 0
-W = 210
-H = 800
 
 [SongMosaicTextNonParty1]
 Inheritance = SongTextNonParty1
-X = 690
-Y = 414
-
 
 [SongMosaicStaticNonParty2]
 Inheritance = SongStaticNonParty2
-X = 616
-Y = 444
 
 [SongMosaicTextNonParty2]
 Inheritance = SongTextNonParty2
-X = 645
-Y = 446
 
 [SongMosaicStaticNonParty3]
 Inheritance = SongStaticNonParty3
-X = 615
-Y = 464
 
 [SongMosaicTextNonParty3]
 Inheritance = SongTextNonParty3
-X = 645
-Y = 466
 
 [SongMosaicStaticNonParty4]
 Inheritance = SongStaticNonParty4
-X = 615
-Y = 484
-Size = 10
 
 [SongMosaicTextNonParty4]
 Inheritance = SongTextNonParty4
-X = 645
-Y = 486
 
 [SongMosaicStaticNonParty5]
 Inheritance = SongStaticNonParty5
-X = 615
-Y = 504
 
 [SongMosaicTextNonParty5]
 Inheritance = SongTextNonParty5
-X = 645
-Y = 506
 
-#Title: Song selection
+[SongMosaicStaticNonParty6]
+Inheritance = SongStaticNonParty6
+
 [SongMosaicTextNonParty6]
-Inheritance = SongRouletteTextNonParty6
-X = 40
-Y = 12
+Inheritance = SongTextNonParty6
+
+[SongMosaicStaticNonParty7]
+Inheritance = SongStaticNonParty7
+
+[SongMosaicTextNonParty7]
+Inheritance = SongTextNonParty7
+
+[SongMosaicStaticNonParty8]
+Inheritance = SongStaticNonParty8
+
+[SongMosaicTextNonParty8]
+Inheritance = SongTextNonParty8
+
+[SongMosaicTextNonParty9]
+Inheritance = SongRouletteTextNonParty9
 
 [SongMosaicTextMaxScore]
 Inheritance = SongTextMaxScore
