--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -37,8 +37,8 @@ icon_song_medley     = [icon]song_medley.png
 icon_song_calcmedley = [icon]song_calcmedley.png
 icon_song_duet       = [icon]song_duet.png
 icon_song_rap        = [icon]song_rap.png
-icon_song_createdby  = [icon]icon_song_createdby.png
-icon_song_fixedby    = [icon]icon_song_fixedby.png
+icon_song_createdby  = [icon]song_createdby.png
+icon_song_fixedby    = [icon]song_fixedby.png
 
 loadicon = [load]logo.png
 loadbaricon = [load]bar.png
