Used always the same console panel to compile in vscode

--- a/dists/vscode/tasks.json
+++ b/dists/vscode/tasks.json
@@ -9,7 +9,7 @@
             },
             "presentation": {
                 "reveal": "always",
-                "panel": "new"
+                "panel": "shared"
             },
             "problemMatcher": {
                 "owner": "external",
@@ -37,7 +37,7 @@
             },
             "presentation": {
                 "reveal": "always",
-                "panel": "new"
+                "panel": "shared"
             },
             "problemMatcher": {
                 "owner": "external",
@@ -65,7 +65,7 @@
             },
             "presentation": {
                 "reveal": "always",
-                "panel": "new"
+                "panel": "shared"
             },
             "problemMatcher": {
                 "owner": "external",
@@ -93,7 +93,7 @@
             },
             "presentation": {
                 "reveal": "always",
-                "panel": "new"
+                "panel": "shared"
             },
             "problemMatcher": {
                 "owner": "external",
@@ -121,7 +121,7 @@
             },
             "presentation": {
                 "reveal": "always",
-                "panel": "new"
+                "panel": "shared"
             },
             "problemMatcher": {
                 "owner": "external",
@@ -149,7 +149,7 @@
             },
             "presentation": {
                 "reveal": "always",
-                "panel": "new"
+                "panel": "shared"
             },
             "problemMatcher": {
                 "owner": "external",
