New song icons & update translations

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -50,7 +50,7 @@ Y = 570
 Color = White
 Font = 1
 Align = 2
-Size = 24
+Size = 18
 Text = SING_LOADING
 Reflection = 0
 ReflectionSpacing = 13
@@ -524,16 +524,6 @@ Type = Transparent
 #Reflection = 1
 #ReflectionSpacing = 0
 
-[SongMenuStatic2]
-X = 258
-Y = 15
-W = 24
-H = 24
-Color = White
-Tex = icon_song_menu
-Type = Colorized
-Z = 0.97
-
 [SongMenuTextMenu]
 X = 288
 Y = 9
@@ -877,38 +867,37 @@ Reflection = 0
 
 [SongMedleyIcon]
 Inheritance = SongIcon
-X = 335
-Y = 477
-W = 30
-H = 20
+X = 420
+Y = 395
+W = 11
+H = 15
 Tex = icon_song_medley
 
 [SongCalculatedMedleyIcon]
 Inheritance = SongMedleyIcon
-Tex = icon_song_calcmedley
 
 [SongVideoIcon]
 Inheritance = SongIcon
-X = 310
-Y = 475
-W = 18
-H = 24
+X = 345
+Y = 395
+W = 12
+H = 17
 Tex = icon_song_video
 
 [SongDuetIcon]
 Inheritance = SongIcon
-X = 335
-Y = 475
-W = 20
-H = 24
+X = 420
+Y = 395
+W = 12
+H = 16
 Tex = icon_song_duet
 
 [SongRapIcon]
 Inheritance = SongIcon
-X = 420
-Y = 475
-W = 18
-H = 24
+X = 450
+Y = 395
+W = 13
+H = 17
 Tex = icon_song_rap
 
 [SongCreatorIcon]
@@ -927,6 +916,14 @@ W = 11
 H = 14
 Tex = icon_song_fixedby
 
+[SongInvalidatedIcon]
+Inheritance = SongIcon
+X = 400
+Y = 535
+W = 11
+H = 14
+Tex = icon_song_invalidated
+
 ########## LEGEND  #########
 
 [SongStaticNonParty1]
@@ -934,33 +931,29 @@ X = 577
 Y = 0
 W = 230
 H = 600
-Tex = BGFade
+Alpha = 0.55
+Tex = BlackBG
 Color = White
 Type = Transparent
 
 [SongTextNonParty1]
-X = 690
-Y = 410
+X = 688
+Y = 455
 Z = 0.952
 Color = White
 Font = 1
-Size = 14
+Size = 20
 Align = 1
 Text = SING_SONG_SELECTION_LEGEND_TITLE
 
 [SongStaticNonParty2]
-X = 611
-Y = 430
-Z = 1
-W = 15
-H = 20
-Tex = icon_song_video
-Color = White
-Type = Transparent
+Inheritance = SongVideoIcon
+X = 590
+Y = 490
 
 [SongTextNonParty2]
-X = 640
-Y = 432
+X = 615
+Y = 492
 Z = 0.952
 Color = White
 Font = 0
@@ -969,18 +962,14 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_VIDEO
 
 [SongStaticNonParty3]
-X = 610
-Y = 450
+Inheritance = SongMedleyIcon
+X = 590
+Y = 514
 Z = 0.952
-W = 26
-H = 16
-Tex = icon_song_medley
-Color = White
-Type = Transparent
 
 [SongTextNonParty3]
-X = 640
-Y = 452
+X = 615
+Y = 514
 Z = 0.952
 Color = White
 Font = 0
@@ -988,39 +977,22 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 
+#Icon medley calculated
 [SongStaticNonParty4]
-X = 610
-Y = 470
-Z = 0.952
-W = 26
-H = 16
-Tex = icon_song_calcmedley
-Color = White
-Type = Transparent
+Inheritance = SongStaticNonParty3
 
+#Text Medley Calculated
 [SongTextNonParty4]
-X = 640
-Y = 472
-Z = 0.952
-Color = White
-Font = 0
-Size = 12
-Align = 0
-Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
+Inheritance = SongTextNonParty3
 
 [SongStaticNonParty5]
-X = 610
-Y = 490
-Z = 0.952
-W = 13
-H = 17
-Tex = icon_song_duet
-Color = White
-Type = Transparent
+Inheritance = SongDuetIcon
+X = 590
+Y = 536
 
 [SongTextNonParty5]
-X = 640
-Y = 492
+X = 615
+Y = 536
 Z = 0.952
 Color = White
 Font = 0
@@ -1029,18 +1001,13 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_DUET
 
 [SongStaticNonParty6]
-X = 610
-Y = 510
-Z = 0.952
-W = 13
-H = 17
-Tex = icon_song_rap
-Color = White
-Type = Transparent
+Inheritance = SongRapIcon
+X = 694
+Y = 492
 
 [SongTextNonParty6]
-X = 640
-Y = 512
+X = 717
+Y = 492
 Z = 0.952
 Color = White
 Font = 0
@@ -1049,18 +1016,13 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_RAP
 
 [SongStaticNonParty7]
-X = 610
-Y = 530
-Z = 0.952
-W = 12
-H = 16
-Tex = icon_song_createdby
-Color = White
-Type = Transparent
+Inheritance = SongCreatorIcon
+X = 694
+Y = 514
 
 [SongTextNonParty7]
-X = 640
-Y = 534
+X = 717
+Y = 514
 Z = 0.952
 Color = White
 Font = 0
@@ -1069,24 +1031,34 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_CREATEDBY
 
 [SongStaticNonParty8]
-X = 610
-Y = 551
-Z = 0.952
-W = 11
-H = 14
-Tex = icon_song_fixedby
-Color = White
-Type = Transparent
+Inheritance = SongFixerIcon
+X = 694
+Y = 536
 
 [SongTextNonParty8]
-X = 640
-Y = 555
+X = 717
+Y = 536
 Z = 0.952
 Color = White
 Font = 0
 Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_FIXEDBY
+
+[SongStaticNonParty9]
+Inheritance = SongUnvalidatedIcon
+X = 694
+Y = 558
+
+[SongTextNonParty9]
+X = 717
+Y = 558
+Z = 0.952
+Color = White
+Font = 0
+Size = 12
+Align = 0
+Text = SING_SONG_SELECTION_LEGEND_INVALIDATED
 
 [SongTextScore]
 Color = White
@@ -1174,36 +1146,27 @@ Visible = 0
 
 [SongRouletteMedleyIcon]
 Inheritance = SongMedleyIcon
-X = 338
-Y = 394
 
 [SongRouletteCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
-X = 338
-Y = 394
 
 [SongRouletteVideoIcon]
 Inheritance = SongVideoIcon
-X = 413
-Y = 392
 
 [SongRouletteDuetIcon]
 Inheritance = SongDuetIcon
-X = 350
-Y = 392
-H = 23
-W = 17
 
 [SongRouletteRapIcon]
 Inheritance = SongRapIcon
-X = 436
-Y = 392
 
 [SongRouletteCreatorIcon]
 Inheritance = SongCreatorIcon
 
 [SongRouletteFixerIcon]
 Inheritance = SongFixerIcon
+
+[SongRouletteInvalidatedIcon]
+Inheritance = SongInvalidatedIcon
 
 #song info background
 [SongRouletteStatic1]
@@ -1276,10 +1239,12 @@ X = 390
 Y = 395
 Z = 0.95
 Color = White
-Size = 18
+Size = 16
 Align = 1
 
 ########## LEGEND ROULETTE #########
+
+# --> Provisional legend. Must be moved to menu screen <--
 
 #background legend
 [SongRouletteStaticNonParty1]
@@ -1734,30 +1699,20 @@ Length = 30
 [SongChessboardMedleyIcon]
 Inheritance = SongMedleyIcon
 X = 40
-Y = 393
-W = 28
-H = 18
+Y = 390
 
 [SongChessboardCalculatedMedleyIcon]
-Inheritance = SongCalculatedMedleyIcon
-X = 40
-Y = 393
-W = 28
-H = 18
+Inheritance = SongMedleyIcon
 
 [SongChessboardVideoIcon]
 Inheritance = SongVideoIcon
-X = 15
+X = 10
 Y = 390
-W = 16
-H = 23
 
 [SongChessboardDuetIcon]
 Inheritance = SongDuetIcon
 X = 40
 Y = 390
-W = 18
-H = 22
 
 [SongChessboardRapIcon]
 Inheritance = SongRapIcon
@@ -1774,43 +1729,30 @@ Inheritance = SongFixerIcon
 X = 10
 Y = 450
 
+[SongChessboardInvalidatedIcon]
+Inheritance = SongInvalidatedIcon
+
 [SongChessboardTextArtist]
+Inheritance = SongRouletteTextArtist
 X = 102
 Y = 240
 W = 192
-Color = White
-Font = 1
-Size = 21
-Align = 1
-Text =
 
 [SongChessboardTextTitle]
+Inheritance = SongRouletteTextTitle
 X = 102
 Y = 303
 W = 192
-Color = White
-Font = 0
-Size = 20
-Align = 1
-Text =
 
 [SongChessboardTextNumber]
-X = 195
+Inheritance = SongRouletteTextNumber
+X = 197
 Y = 395
-Z = 0.95
-Color = White
-Size = 14
-Align = 2
-Reflection = 0
-ReflectionSpacing = 21
 
 [SongChessboardTextYear]
+Inheritance = SongRouletteTextYear
 X = 100
-Y = 394
-Z = 0.95
-Color = White
-Size = 16
-Align = 1
+Y = 390
 
 [SongChessboardTextCreator]
 Inheritance = SongRouletteTextCreator
@@ -2161,30 +2103,18 @@ Visible = 0
 
 [SongCarouselMedleyIcon]
 Inheritance = SongMedleyIcon
-X = 338
-Y = 394
 
 [SongCarouselCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
-X = 338
-Y = 394
 
 [SongCarouselVideoIcon]
 Inheritance = SongVideoIcon
-X = 413
-Y = 392
 
 [SongCarouselDuetIcon]
 Inheritance = SongDuetIcon
-X = 350
-Y = 392
-H = 23
-W = 17
 
 [SongCarouselRapIcon]
 Inheritance = SongRapIcon
-X = 436
-Y = 392
 
 [SongCarouselCreatorIcon]
 Inheritance = SongCreatorIcon
@@ -2192,23 +2122,23 @@ Inheritance = SongCreatorIcon
 [SongCarouselFixerIcon]
 Inheritance = SongFixerIcon
 
+[SongCarouselInvalidatedIcon]
+Inheritance = SongInvalidatedIcon
+
 [SongCarouselStatic1]
-Inheritance = SongSlideStatic1
+Inheritance = SongRouletteStatic1
 
 [SongCarouselTextArtist]
-Inheritance = SongSlideTextArtist
-X = 390
+Inheritance = SongRouletteTextArtist
 
 [SongCarouselTextTitle]
-Inheritance = SongSlideTextTitle
-X = 390
+Inheritance = SongRouletteTextTitle
 
 [SongCarouselTextNumber]
-Inheritance = SongSlideTextNumber
+Inheritance = SongRouletteTextNumber
 
 [SongCarouselTextYear]
-Inheritance = SongSlideTextYear
-X = 390
+Inheritance = SongRouletteTextYear
 
 [SongCarouselTextCreator]
 Inheritance = SongRouletteTextCreator
@@ -2555,37 +2485,27 @@ Visible = 0
 [SongSlotMachineMedleyIcon]
 Inheritance = SongMedleyIcon
 X = 295
-Y = 352
-W = 31
-H = 21
+Y = 350
 
 [SongSlotMachineCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
 X = 295
-Y = 352
-W = 31
-H = 21
+Y = 350
 
 [SongSlotMachineVideoIcon]
 Inheritance = SongVideoIcon
 X = 265
 Y = 350
-W = 21
-H = 25
 
 [SongSlotMachineDuetIcon]
 Inheritance = SongDuetIcon
 X = 295
 Y = 350
-W = 20
-H = 25
 
 [SongSlotMachineRapIcon]
 Inheritance = SongRapIcon
 X = 332
 Y = 350
-W = 20
-H = 25
 
 [SongSlotMachineCreatorIcon]
 Inheritance = SongCreatorIcon
@@ -2596,6 +2516,9 @@ Y = 200
 Inheritance = SongFixerIcon
 X = 500
 Y = 225
+
+[SongSlotMachineInvalidatedIcon]
+Inheritance = SongInvalidatedIcon
 
 [SongSlotMachineStatic1]
 X = 250
@@ -2609,33 +2532,28 @@ Tex = SongSelection2
 Type = Colorized
 
 [SongSlotMachineTextArtist]
+Inheritance = SongRouletteTextArtist
 X = 265
 Y = 200
 W = 200
-Color = White
-Font = 1
-Size = 20
 Align = 0
 
 [SongSlotMachineTextTitle]
+Inheritance = SongRouletteTextTitle
 X = 265
 Y = 260
 W = 200
-Color = White
-Size = 18
 Align = 0
 
 [SongSlotMachineTextNumber]
-Inheritance = SongSlideTextNumber
+Inheritance = SongRouletteTextNumber
 X = 705
 Y = 370
-Size = 14
 
 [SongSlotMachineTextYear]
-Inheritance = SongSlideTextYear
+Inheritance = SongRouletteTextYear
 X = 280
 Y = 320
-Size = 18
 
 [SongSlotMachineTextCreator]
 Inheritance = SongRouletteTextCreator
@@ -3021,6 +2939,9 @@ Inheritance = SongCreatorIcon
 
 [SongSlideFixerIcon]
 Inheritance = SongFixerIcon
+
+[SongSlideInvalidatedIcon]
+Inheritance = SongInvalidatedIcon
 
 [SongSlideStatic1]
 Inheritance = SongRouletteStatic1
@@ -3452,32 +3373,32 @@ ReflectionSpacing = 2
 
 [SongListMedleyIcon]
 Inheritance = SongMedleyIcon
-X = 500
-Y = 112
+X = 509
+Y = 113
 Z = 1
 
 [SongListCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
-X = 500
-Y = 112
+X = 509
+Y = 113
 Z = 1
 
 [SongListVideoIcon]
 Inheritance = SongVideoIcon
-X = 501
-Y = 86
+X = 510
+Y = 88
 Z = 1
 
 [SongListDuetIcon]
 Inheritance = SongDuetIcon
-X = 500
-Y = 112
+X = 510
+Y = 113
 Z = 1
 
 [SongListRapIcon]
 Inheritance = SongRapIcon
 X = 470
-Y = 112
+Y = 113
 Z = 1
 
 [SongListCreatorIcon]
@@ -3490,20 +3411,21 @@ Inheritance = SongFixerIcon
 X = 580
 Y = 555
 
+[SongListInvalidatedIcon]
+Inheritance = SongInvalidatedIcon
+
 [SongListTextArtist]
+Inheritance = SongRouletteTextArtist
 X = 100
 Y = 73
 W = 390
-Color = White
-Font = 1
-Size = 20
+Align = 0
 
 [SongListTextTitle]
+Inheritance = SongRouletteTextTitle
 X = 100
 Y = 108
 W = 390
-Color = White
-Size = 18
 Align = 0
 
 [SongListTextNumber]
@@ -3938,40 +3860,41 @@ Bands = 18
 
 [SongMosaicMedleyIcon]
 Inheritance = SongMedleyIcon
-X = 540
-Y = 432
+X = 545
+Y = 412
 
 [SongMosaicCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
-X = 540
-Y = 432
+X = 545
+Y = 412
 
 [SongMosaicVideoIcon]
 Inheritance = SongVideoIcon
-X = 542
-Y = 400
+X = 545
+Y = 380
 
 [SongMosaicDuetIcon]
 Inheritance = SongDuetIcon
-X = 540
-Y = 428
-W = 22
-H = 24
+X = 545
+Y = 408
 
 [SongMosaicRapIcon]
 Inheritance = SongRapIcon
-X = 540
-Y = 465
-W = 20
-H = 24
+X = 545
+Y = 445
 
 [SongMosaicCreatorIcon]
 Inheritance = SongCreatorIcon
 X = 230
+Y = 450
 
 [SongMosaicFixerIcon]
 Inheritance = SongFixerIcon
 X = 415
+Y = 450
+
+[SongMosaicInvalidatedIcon]
+Inheritance = SongInvalidatedIcon
 
 [SongMosaicStatic1]
 X = 220
@@ -3986,20 +3909,18 @@ Reflection = 0
 ReflectionSpacing = 2
 
 [SongMosaicTextArtist]
+Inheritance = SongRouletteTextArtist
 X = 230
 Y = 340
 W = 300
-Color = White
-Font = 1
-Size = 24
 Align = 0
 
 [SongMosaicTextTitle]
+Inheritance = SongRouletteTextTitle
 X = 230
 Y = 390
 W = 300
-Color = White
-Size = 20
+Align = 0
 
 [SongMosaicTextNumber]
 Inheritance = SongRouletteTextNumber
@@ -4015,10 +3936,12 @@ Align = 2
 [SongMosaicTextCreator]
 Inheritance = SongRouletteTextCreator
 X = 250
+Y = 452
 
 [SongMosaicTextFixer]
 Inheritance = SongRouletteTextFixer
 X = 435
+Y = 452
 
 ########## LEGEND MOSAIC #########
 
