--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -19,7 +19,6 @@ Color=Violet
 /**
  * Interface
  */
-interface_selectbg_search   = [interface]selectbg_search.png
 interface_dialog_background = [interface]dialog_background.png
 interface_dialog_background2 = [interface]dialog_background2.png
 interface_dialog_backgroundtop = [interface]dialog_backgroundtop.png
@@ -30,18 +29,14 @@ Cursor_Pressed = [interface]cursor_pressed.png
 /**
  * Icons
  */
-icon_song_menu       = [icon]song_menu.png
-icon_song_search     = [icon]song_search.png
-icon_song_video      = [icon]song_video.png
-icon_song_medley     = [icon]song_medley.png
-icon_song_calcmedley = [icon]song_calcmedley.png
-icon_song_duet       = [icon]song_duet.png
-icon_song_rap        = [icon]song_rap.png
-icon_song_createdby  = [icon]song_createdby.png
-icon_song_fixedby    = [icon]song_fixedby.png
-
-loadicon = [load]logo.png
-loadbaricon = [load]bar.png
+icon_song_search      = [icon]song_search.png
+icon_song_video       = [icon]song_video.png
+icon_song_medley      = [icon]song_medley.png
+icon_song_duet        = [icon]song_duet.png
+icon_song_rap         = [icon]song_rap.png
+icon_song_createdby   = [icon]song_createdby.png
+icon_song_fixedby     = [icon]song_fixedby.png
+icon_song_invalidated = [icon]song_invalidated.png
 
 # # # M A I N # # #
 ButtonSolo     = [main]buttonsolo.png
@@ -168,9 +163,6 @@ Optionsbuttonprofiles    = [Options]buttonprofiles.png
 Optionsbuttonback        = [Options]buttonback.png
 
 # # # M A I N   P A R T Y # # #
-ClassicButton     =[MainParty]ClassicButton.png
-ClassicFreeButton =[MainParty]ClassicFreeButton.png
-ChallengeButton   =[MainParty]ChallengeButton.png
 TournamentButton  =[tournament]trophy.png
 
 # # # P A R T Y # # #
@@ -217,8 +209,6 @@ ButtonDel   = [button]del.png
 
 SongMenuBG  = [menu]songMenuBg.png
 SongMenuSelectBG  = [menu]songMenuSelectBg.png
-PopUpBG     = [menu]popUpBG.png
-
 
 # # # N O T E S # # #
 # sung notes - colorized with playercolors
@@ -316,3 +306,7 @@ AboutBG = [About]helperbg2.png
 
 # # # D E V E L O P E R S # # #
 Dhelperbg = [Developers]helperbg.png
+
+# # # C O M M O N # # #
+BlackBG = [common]blackbg.png
+
