updated arrow selection

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1637,24 +1637,27 @@ Z = 0.10
 
 [SongChessboardStatic2]
 X = 748
-Y = 189
-W = 35
-H = 46
+Y = 220
+W = 30
+H = 41
 Z = 0.4
 Tex = SongSelection1up
-Color = ColorLight
+Color = ColorDark
+DColor = GrayLight
 Type = Colorized
 Reflection = 0
 ReflectionSpacing = 2
 
+
 [SongChessboardStatic3]
 X = 748
-Y = 333
-W = 35
-H = 46
+Y = 350
+W = 30
+H = 41
 Z = 0.951
 Tex = SongSelection1dn
-Color = ColorLight
+Color = ColorDark
+DColor = GrayLight
 Type = Colorized
 Reflection = 0
 ReflectionSpacing = 2
