Update song menu theme

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -524,8 +524,8 @@ Color = White
 Type = Transparent
 
 [SongMenuTextMenu]
-X = 688
-Y = 35
+X = 690
+Y = 30
 Color = White
 Size = 20
 Text = MENU
@@ -533,11 +533,11 @@ Font = 1
 Align = 1
 
 [SongMenuButton1]
-X = 600
-Y = 78
+X = 580
+Y = 70
 Z = 0.97
-W = 200
-H = 18
+W = 220
+H = 30
 Tex = Rectangle
 Color = ColorLight
 DColor = ColorDark
@@ -545,11 +545,11 @@ Type = Colorized
 Texts = 1
 
 [SongMenuButton1Text1]
-X = 6
-Y = 0
+X = 30
+Y = 6
 Z = 0.97
 Color = White
-Size = 16
+Size = 15
 Text = SONG_MENU_PLAY
 
 # shows up instead of Button 1
@@ -561,14 +561,14 @@ Type = Transparent
 TypeSBG = Colorized
 ShowArrows = 1
 OneItemOnly = 1
-X = 600
-Y = 78
+X = 580
+Y = 70
 W = 0
-H = 18
+H = 30
 Z = 0.97
 SkipX = 0
-SBGW = 200
-TextSize = 16
+SBGW = 220
+TextSize = 15
 Color = ColorLight
 DColor = ColorDark
 TColor = White
@@ -579,11 +579,11 @@ STColor = White
 STDColor = White
 
 [SongMenuButton2]
-X = 600
-Y = 105
+X = 580
+Y = 100
 Z = 0.97
-W = 200
-H = 18
+W = 220
+H = 30
 Tex = Rectangle
 Color = ColorLight
 DColor = ColorDark
@@ -591,10 +591,10 @@ Type = Colorized
 Texts = 1
 
 [SongMenuButton2Text1]
-X = 6
-Y = 0
+X = 30
+Y = 6
 Color = White
-Size = 16
+Size = 15
 Text = SONG_MENU_EDIT
 Z = 0.97
 
@@ -602,14 +602,14 @@ Z = 0.97
 # in some song menus
 [SongMenuSelectSlide2]
 Inheritance = SongMenuSelectSlide1
-Y = 105
+Y = 100
 
 [SongMenuButton3]
-X = 600
-Y = 135
+X = 580
+Y = 130
 Z = 0.97
-W = 200
-H = 18
+W = 220
+H = 30
 Tex = Rectangle
 Color = ColorLight
 DColor = ColorDark
@@ -617,11 +617,11 @@ Type = Colorized
 Texts = 1
 
 [SongMenuButton3Text1]
-X = 6
-Y = 0
+X = 30
+Y = 6
 Color = White
 Font = 0
-Size = 16
+Size = 15
 Text = SONG_MENU_MODI
 Align = 0
 Z = 0.97
@@ -630,14 +630,14 @@ Z = 0.97
 # in some song menus
 [SongMenuSelectSlide3]
 Inheritance = SongMenuSelectSlide1
-Y = 135
+Y = 130
 
 [SongMenuButton4]
-X = 600
-Y = 165
+X = 580
+Y = 160
 Z = 0.97
-W = 200
-H = 18
+W = 220
+H = 30
 Tex = Rectangle
 Color = ColorLight
 DColor = ColorDark
@@ -645,21 +645,21 @@ Type = Colorized
 Texts = 1
 
 [SongMenuButton4Text1]
-X = 6
-Y = 0
+X = 30
+Y = 6
 Color = White
 Font = 0
-Size = 16
-Text = SONG_MENU_CANCEL
+Size = 15
+Text = C_BACK
 Align = 0
 Z = 0.97
 
 [SongMenuButton5]
-X = 600
-Y = 195
+X = 580
+Y = 190
 Z = 0.97
-W = 200
-H = 18
+W = 220
+H = 30
 Tex = Rectangle
 Color = ColorLight
 DColor = ColorDark
@@ -667,12 +667,12 @@ Type = Colorized
 Texts = 1
 
 [SongMenuButton5Text1]
-X = 6
-Y = 0
+X = 30
+Y = 6
 Color = White
 Font = 0
-Size = 16
-Text = SONG_MENU_CANCEL
+Size = 15
+Text = C_BACK
 Align = 0
 Z = 0.97
 
@@ -681,7 +681,7 @@ Z = 0.97
 
 #text title legend
 [SongMenuText1]
-X = 688
+X = 690
 Y = 455
 Z = 0.952
 Color = White
@@ -755,12 +755,30 @@ Text = SONG_MENU_LEGEND_DUET
 #icon rap legend
 [SongMenuStatic6]
 Inheritance = SongRapIcon
-X = 694
-Y = 492
+X = 590
+Y = 558
 Z = 0.97
 
 #text rap legend
 [SongMenuText6]
+X = 615
+Y = 558
+Z = 0.952
+Color = White
+Font = 0
+Size = 12
+Align = 0
+Text = SONG_MENU_LEGEND_RAP
+
+#icon Unvalidated legend
+[SongMenuStatic9]
+Inheritance = SongUnvalidatedIcon
+X = 694
+Y = 492
+Z = 0.97
+
+#text Unvalidated legend
+[SongMenuText9]
 X = 717
 Y = 492
 Z = 0.952
@@ -768,7 +786,7 @@ Color = White
 Font = 0
 Size = 12
 Align = 0
-Text = SONG_MENU_LEGEND_RAP
+Text = SONG_MENU_LEGEND_UNVALIDATED
 
 #icon createdby legend
 [SongMenuStatic7]
@@ -805,24 +823,6 @@ Font = 0
 Size = 12
 Align = 0
 Text = SONG_MENU_LEGEND_FIXEDBY
-
-#icon Unvalidated legend
-[SongMenuStatic9]
-Inheritance = SongUnvalidatedIcon
-X = 694
-Y = 558
-Z = 0.97
-
-#text Unvalidated legend
-[SongMenuText9]
-X = 717
-Y = 558
-Z = 0.952
-Color = White
-Font = 0
-Size = 12
-Align = 0
-Text = SONG_MENU_LEGEND_UNVALIDATED
 
 
 [SongJumpto]
