--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -243,7 +243,7 @@ NotePerfectStar = [effect]perfectNoteStar.png
 
 
 # # # dirty helpers # # #
-Rectangle  = [helper]rectangle.png
+Rectangle  = [button]rectangle.png
 ButtonFade = [helper]buttonFade.png
 BGFade     = [special]bg_fade.png
 
