--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 20.9
+Text = UltraStar WorldParty 20.10
 
 [MainText2]
 X = 5
@@ -650,7 +650,7 @@ Y = 6
 Color = White
 Font = 0
 Size = 15
-Text = SEARCH_NEW_SONGS
+Text = C_SEARCH_NEW_SONGS
 Align = 0
 Z = 0.97
 
